--- a/11_Day_Destructuring_and_spreading/11_day_starter/index.html
+++ b/11_Day_Destructuring_and_spreading/11_day_starter/index.html
@@ -9,8 +9,7 @@
 	<h1>30DaysOfJavaScript:11 Day</h1>
 	<h2>Destructuring and Spread</h2>
 
-	<script src="./data/countries_data.js"></script>
-	<script src="./scripts/main.js"></script>
+	<script src="./scripts/main.js" type="module"></script>
 
 </body>
 
