--- a/13_Day_Console_object_methods/13_day_starter/index.html
+++ b/13_Day_Console_object_methods/13_day_starter/index.html
@@ -9,8 +9,7 @@
 	<h1>30DaysOfJavaScript:13 Day</h1>
 	<h2>Console Object Methods</h2>
 
-	<script src="./data/countries_data.js"></script>
-	<script src="./scripts/main.js"></script>
+	<script src="./scripts/main.js" type="module"></script>
 
 </body>
 
