--- a/18_Day_Promises/18_day_starter/index.html
+++ b/18_Day_Promises/18_day_starter/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title>30DaysOfJavaScript:18 Day </title>
+	
 </head>
 
 <body>
@@ -10,8 +11,9 @@
 	<h2>Promises</h2>
 
 	<script src="./data/countries_data.js"></script>
-	<script src="./scripts/main.js"></script>
+	<script src="./scripts/main.js" async></script>
 
 </body>
 
 </html>
+
