solved this exercise

--- a/21_Day_DOM/21_day_starter/index.html
+++ b/21_Day_DOM/21_day_starter/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 
 <head>
-	<title>30DaysOfJavaScript:21 Day </title>
+	<title>JavaScript for Everyone:DOM</title>
 </head>
 
 <body>
+	<p id="p1">This is paragraph one</p>
+	<p id="p2">This is paragraph two</p>
+	<p id="p3">This is paragraph three</p>
+	<p id="p4">This is paragraph four</p>
+	
 	<div class="wrapper">
 		<h1>Asabeneh Yetayeh challenges in 2020</h1>
 		<h2>30DaysOfJavaScript Challenge</h2>
@@ -19,8 +24,8 @@
 			<li>30DaysOfMachineLearning Challenge Coming</li>
 		</ul>
 	</div>
+	
 	<script src="./scripts/main.js"></script>
-
 </body>
 
 </html>
